--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400;600;700&display=swap");
 
 :root {
-    --liseret-icone-color: #e38f45 ;
+    --liseret-icone-color: #dc985d ;
     --bandeau-color: #222f3e;
 }
 
@@ -109,4 +109,262 @@ header {
 /* Bloc */
 
 main {
-    display: fle
+    display: flex;
+}
+
+/* Bloc-gauche */
+
+#bloc-gauche {
+    display: flex;
+    flex-direction: column;
+    width: 380px;
+    flex-shrink: 0;
+    background-color: var(--liseret-icone-color);
+}
+
+#bloc-gauche h2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50px;
+    background-color: var(--bandeau-color);
+    color: var(--liseret-icone-color);
+    margin: 0;
+}
+
+address {
+    padding: 0 40px;
+}
+
+.texte-a-propos {
+    padding: 0 40px;
+}
+
+.texte-a-propos p {
+    text-align: justify;
+}
+
+/* Bloc-droite */
+
+#bloc-droite, #recommandations {
+    display: flex;
+    flex-direction: column;
+    flex: 1 1 auto;
+    margin: 0 50px;
+}
+
+#bloc-droite h2 {
+    border-bottom: 3px solid var(--liseret-icone-color);
+}
+
+/* bloc-formation - Experience */
+
+.bloc-formations, .bloc-experiences {
+    display: flex;
+    align-items: flex-start;
+    margin-top: 50px;
+}
+
+.bloc-dates {
+    display: flex;
+    align-items: flex-start;
+    flex-basis: 30%;
+}
+
+.bloc-details {
+    flex-basis: 70%;
+}
+
+/* Footer */
+
+footer {
+    display: flex;
+}
+
+#loisirs {
+    display: flex;
+    flex-direction: column;
+    background-color: var(--liseret-icone-color);
+    width: 380px;
+    flex-shrink: 0;
+}
+
+#loisirs h2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50px;
+    background-color: var(--bandeau-color);
+    color: var(--liseret-icone-color);
+    margin: 0;
+}
+
+.icone-loisirs {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-grow: 1;
+}
+
+.icone-loisirs .fas {
+    color: var(--bandeau-color);
+}
+
+.cercle {
+    font-size: 35px;
+    border: 5px double var(--bandeau-color);
+    border-radius: 50%;
+    padding: 15px;
+    width: 40px;
+    height: 40px;
+    text-align: center;
+}
+
+.cercle .fas {
+    margin: 0;
+}
+
+#recommandations {
+    padding-bottom: 30px;
+}
+
+#recommandations h2 {
+    border-bottom: 3px solid var(--liseret-icone-color);
+}
+
+.bloc-recommandations {
+    display: flex;
+    justify-content: flex-start;
+    margin-top: 10px;
+}
+
+.bloc-recommandations h4 {
+    text-transform: uppercase;
+    margin: 6px 0;
+}
+
+.bloc-recommandations p {
+    margin: 5px 0;
+}
+
+.recommandation-g {
+    width: 50%;
+}
+
+/* Responsive Mqueri*/
+
+@media all and (max-width:1024px) {
+    header {
+        flex-direction: column;
+        height: auto;
+    }
+
+    #photo {
+        width: 100%;
+        padding: 10px 0;
+    }
+
+    #titre {
+        margin: 0;
+        text-align: center;
+    }
+
+    main {
+        flex-direction: column;
+    }
+
+    #bloc-gauche {
+        width: 100%;
+        text-align: center;
+    }
+
+
+    .contact p {
+        padding: 0;
+    }
+
+    #bloc-droite, #recommandations {
+        margin: 0;
+    }
+
+    article h2 {
+        background-color: var(--bandeau-color);
+        color: var(--liseret-icone-color);
+        text-align: center;
+        padding: 10px 0;
+        margin: 0;
+    }
+    h2 .fas {
+        padding-bottom: 0;
+        color: var(--liseret-icone-color);
+    }
+
+    ol {
+        margin: 0 10px;
+    }
+
+    ol li:last-child {
+        margin-bottom: 30px;
+    }
+    
+    footer {
+        flex-direction: column-reverse;
+    
+    }
+
+    #loisirs {
+        width: 100%;
+        margin-top: 20px;
+    }
+
+    .icone-loisirs {
+        padding: 30px 0;
+    }
+
+    .bloc-recommandations {
+        justify-content: space-around;
+        margin-top: 40px;
+        padding: 0 10px; 
+    }
+
+    .recommandation-g {
+        width: auto;
+    }
+}
+
+@media all and (max-width:540px) 
+{
+    
+    .bloc-formations, .bloc-experiences {
+        flex-direction: column;
+        border-bottom: 1px solid var(--liseret-icone-color);
+        padding-bottom: 15px;
+    }
+
+    ol li:last-child {
+        border-bottom: none;
+        padding-bottom: 0;
+    }
+
+    .bloc-dates {
+        flex-direction: row;
+        width: 100%;
+    }
+
+    .bloc-details {
+        width: 100%;
+    }
+
+    .bloc-recommandations {
+        flex-direction: column;
+    }
+
+    .recommandation-g {
+        border-bottom: 1px solid var(--liseret-icone-color);
+        padding-bottom: 20px;
+    }
+
+    .recommandation-d {
+        padding-top: 20px;
+    }
+}
