--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400;600;700&display=swap");
 
 :root {
-    --liseret-icone-color: #dc985d ;
+    --liseret-icone-color: #e69d43 ;
     --bandeau-color: #222f3e;
 }
 
